tests/invalid_scir_h/invalid_finally.scirh
module invalid.finally
fn bad -> int !
  try
    return 1
  catch err Error
    return 0
  finally
    return 2
